--- a/userappAN/src/app/pages/gantt-chart-list/gantt-chart-list.component.html
+++ b/userappAN/src/app/pages/gantt-chart-list/gantt-chart-list.component.html
@@ -1,9 +1,8 @@
-    <div class="gantt-chart-list">
-    <!-- Left side: List of Gantt charts -->
+<div class="background-container">
+  <div class="gantt-chart-list">
     <div class="chart-list">
       <h3>Gantt Charts</h3>
       <ul>
-        <!-- Loop through the list of Gantt charts -->
         <li
           *ngFor="let chart of ganttCharts"
           (click)="renderGanttChart(chart)"
@@ -14,20 +13,17 @@
       </ul>
     </div>
   
-    <!-- Right side: Gantt chart container -->
     <div class="gantt-container">
-      <!-- Display the selected Gantt chart name -->
       <h3 *ngIf="selectedGanttChart">Selected Gantt Chart: {{ selectedGanttChart.taskName }}</h3>
   
-      <!-- Render the Gantt chart if tasks are available -->
       <div
         id="gantt-container"
         style="width: 100%; height: 500px; overflow: hidden;"
       ></div>
   
-      <!-- Display a message if no tasks are available -->
       <ng-template #noTasks>
         <p>No tasks available.</p>
       </ng-template>
     </div>
   </div>
+</div>  
