--- a/userappAN/src/app/pages/header/header.component.html
+++ b/userappAN/src/app/pages/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="logo">MyApp</div>
     <nav class="nav-links">
       <a href="home">Home</a>
-      <a href="#">About</a>
+      <a href="about">About</a>
       <a href="#">Services</a>
       <a href="#">Contact</a>
     </nav>
